--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,18 +77,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="FireForward",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="FireForward",Scale=-1.000000,Key=Gamepad_RightY)
-+AxisMappings=(AxisName="FireForward",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="FireRight",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="FireRight",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="FireRight",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++ActionMappings=(ActionName="LeftFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="RightFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
