--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -82,6 +82,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Forward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="ShootGrapple",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Reverse",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
