Added a main menu and fixed a bug with non-appearing messages

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=51ABC27149D99C7FB9B6F4B2FE651B8B
+ProjectName=NoEngineNoProblem
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
