--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/Level1.Level1
 GameInstanceClass=/Game/Blueprints/GI_Main.GI_Main_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
